--- a/.github/workflows/android-arm64-static.yml
+++ b/.github/workflows/android-arm64-static.yml
@@ -25,8 +25,7 @@ jobs:
 
         ENV DEBIAN_FRONTEND=noninteractive
         ENV TZ=Etc/UTC
-        ENV NO_DNS_SUPPORT=1
-        
+
         # Install basic dependencies
         RUN apt-get update && apt-get install -y \
             build-essential \
@@ -58,11 +57,9 @@ jobs:
             libbz2-dev \
             pkg-config \
             sed \
+            libpcap-dev \
             libfindbin-libs-perl \
-            libdbus-1-dev \
-            musl \
-            musl-dev \
-            musl-tools
+            libdbus-1-dev
 
         # Make sure zstd is installed and show its location
         RUN apt-get install -y libzstd-dev \
@@ -125,9 +122,6 @@ jobs:
                 gcc -c stub.c -o stub.o && \
                 ar rcs /usr/lib/llvm-16/lib/libLLVMfrontenddriver.a stub.o; \
             fi
-            
-        # Install net-tools for static build
-        RUN apt-get update && apt-get install -y net-tools
 
         # Extract and prepare static version of libclang for linking
         RUN mkdir -p /tmp/libclang_extract && cd /tmp/libclang_extract && \
@@ -141,23 +135,6 @@ jobs:
             fi && \
             # Create additional symlinks that might be needed
             ln -sf /usr/lib/libclang_static.a /usr/lib/libclang.a
-
-        # Create network function stubs for static linking
-        RUN mkdir -p /tmp/network_stubs && cd /tmp/network_stubs && \
-            cat > network_stubs.c << 'EOF_NETWORK'
-#include <netdb.h>
-#include <sys/socket.h>
-
-struct hostent *gethostbyname(const char *name) { return NULL; }
-int gethostbyname_r(const char *name, struct hostent *ret, char *buf, size_t buflen, struct hostent **result, int *h_errnop) { return -1; }
-struct netent *getnetbyname(const char *name) { return NULL; }
-int getnetbyname_r(const char *name, struct netent *result, char *buffer, size_t buflen, struct netent **entry, int *errnop) { return -1; }
-struct protoent *getprotobyname(const char *name) { return NULL; }
-int getprotobyname_r(const char *name, struct protoent *result, char *buffer, size_t buflen, struct protoent **entry) { return -1; }
-EOF_NETWORK
-        RUN cd /tmp/network_stubs && \
-            musl-gcc -c network_stubs.c -o network_stubs.o && \
-            ar rcs /usr/lib/libnetwork_stubs.a network_stubs.o
 
         WORKDIR /bpftrace
         EOF
@@ -200,8 +177,6 @@ EOF_NETWORK
         find /usr -name "libdbus*.so*" || echo "libdbus*.so not found"
         echo "Architecture:"
         uname -m
-        echo "Stub library for network functions:"
-        find /usr -name "libnetwork_stubs.a" || echo "libnetwork_stubs.a not found"
 
         # Create a working directory
         mkdir -p /bpftrace-build
@@ -244,7 +219,7 @@ EOF_NETWORK
           cd /bpftrace-build
         fi
         
-        # Create a full static libclang.a
+        # Create a full static libclang.a to replace -lclang reference
         echo "Creating full libclang.a to replace -lclang reference"
         ln -sf /usr/lib/libclang_static.a /usr/lib/libclang.a
         
@@ -502,6 +477,9 @@ EOF_NETWORK
           include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/custom/zstd.cmake)' CMakeLists.txt
         fi
         
+        # ======= NEW: FIX CLANG LIBRARY REFERENCES IN CMAKEFILES.TXT =======
+        echo "Fixing clang library references in cmake files..."
+        
         # Find all CMakeLists.txt files that reference -lclang
         for cmake_file in $(find . -name "CMakeLists.txt"); do
           if grep -q "\-lclang" "$cmake_file"; then
@@ -511,62 +489,6 @@ EOF_NETWORK
             if ! grep -q "libclang.a" "$cmake_file" && grep -q "target_link_libraries" "$cmake_file"; then
               sed -i '/target_link_libraries/ s/)/ \/usr\/lib\/libclang.a)/' "$cmake_file"
             fi
-          fi
-        done
-        
-        # Add patch to disable network resolution in bpftrace
-        if [ -f "src/attached_probe.cpp" ]; then
-          echo "Patching code to disable network resolution..."
-          
-          # Create a file with no-op implementations for network functions
-          mkdir -p src/utils
-          cat > src/utils/network_disabled.h << 'NETDISABLED'
-        #pragma once
-        
-        // This file provides no-op replacements for network functions
-        // to avoid linking issues with static builds
-        
-        #ifdef NO_DNS_SUPPORT
-        
-        #include <netinet/in.h>
-        #include <string>
-        
-        namespace bpftrace {
-        namespace utils {
-        
-        inline int resolve_inet_address(const std::string &host, int family, struct sockaddr_storage *addr)
-        {
-          // Return error for all network resolution attempts
-          return -1;
-        }
-        
-        } // namespace utils
-        } // namespace bpftrace
-        
-        #endif // NO_DNS_SUPPORT
-        NETDISABLED
-          
-          # Modify files that use network resolution
-          for src_file in $(find src -name "*.cpp" -o -name "*.h"); do
-            if grep -q "resolve_inet_address" "$src_file"; then
-              echo "Patching $src_file to use no-op network resolution"
-              sed -i '1s/^/#include "utils\/network_disabled.h"\n/' "$src_file"
-            fi
-          done
-        fi
-        
-        # Disable libpcap usage if found
-        for src_file in $(find src -name "*.cpp" -o -name "*.h"); do
-          if grep -q "#include <pcap.h>" "$src_file"; then
-            echo "Disabling pcap.h in $src_file"
-            sed -i 's/#include <pcap.h>/#ifdef HAVE_LIBPCAP\n#include <pcap.h>\n#endif/' "$src_file"
-          fi
-          
-          # Also adapt pcap function calls
-          if grep -q "pcap_" "$src_file"; then
-            echo "Adding HAVE_LIBPCAP guards to pcap functions in $src_file"
-            sed -i 's/pcap_/#ifdef HAVE_LIBPCAP\npcap_/g' "$src_file"
-            sed -i 's/);/); \n#else\nreturn nullptr;\n#endif/g' "$src_file"
           fi
         done
         
@@ -608,17 +530,124 @@ EOF_NETWORK
           sed -i 's/-lclang//g' src/CMakeLists.txt
         fi
 
-        # ======= INITIALIZE BUILD DIRECTORY WITH MUSL COMPILER =======
+        # ======= NEW: ADD STATIC NETWORK STUB FUNCTIONS =======
+        echo "Creating stub replacements for networking functions..."
+
+        # Create a stub library with replacements for problematic NSS functions
+        mkdir -p /tmp/static_stubs
+        cd /tmp/static_stubs
+
+        cat > network_stubs.c << 'STUBS'
+        #include <netdb.h>
+        #include <stdlib.h>
+        #include <string.h>
+        #include <errno.h>
+
+        // Stub for gethostbyname that doesn't require NSS
+        struct hostent *gethostbyname(const char *name) {
+            static struct hostent he;
+            static char *aliases[] = { NULL };
+            static char *addr_list[2];
+            static char addr[4] = {127, 0, 0, 1}; // Return localhost
+            
+            addr_list[0] = addr;
+            addr_list[1] = NULL;
+            
+            he.h_name = (char *)name;
+            he.h_aliases = aliases;
+            he.h_addrtype = AF_INET;
+            he.h_length = 4;
+            he.h_addr_list = addr_list;
+            
+            return &he;
+        }
+
+        // Stub for getnetbyname
+        struct netent *getnetbyname(const char *name) {
+            errno = ENOSYS;
+            return NULL;
+        }
+
+        // Stub for getprotobyname
+        struct protoent *getprotobyname(const char *name) {
+            static struct protoent pe;
+            static char *aliases[] = { NULL };
+            
+            // Handle most common protocols
+            if (strcmp(name, "tcp") == 0) {
+                pe.p_name = "tcp";
+                pe.p_aliases = aliases;
+                pe.p_proto = 6;
+                return &pe;
+            } else if (strcmp(name, "udp") == 0) {
+                pe.p_name = "udp";
+                pe.p_aliases = aliases;
+                pe.p_proto = 17;
+                return &pe;
+            } else if (strcmp(name, "icmp") == 0) {
+                pe.p_name = "icmp";
+                pe.p_aliases = aliases;
+                pe.p_proto = 1;
+                return &pe;
+            }
+            
+            errno = ENOSYS;
+            return NULL;
+        }
+
+        // Minimal implementation of getnetbyname_r
+        int getnetbyname_r(const char *name, struct netent *result_buf,
+                          char *buf, size_t buflen, struct netent **result,
+                          int *h_errnop) {
+            *result = NULL;
+            if (h_errnop) *h_errnop = NETDB_INTERNAL;
+            return ENOSYS;
+        }
+
+        // Minimal implementation of getprotobyname_r
+        int getprotobyname_r(const char *name, struct protoent *result_buf,
+                            char *buf, size_t buflen, struct protoent **result) {
+            static char *aliases[] = { NULL };
+            
+            // Handle most common protocols
+            if (strcmp(name, "tcp") == 0) {
+                result_buf->p_name = "tcp";
+                result_buf->p_aliases = aliases;
+                result_buf->p_proto = 6;
+                *result = result_buf;
+                return 0;
+            } else if (strcmp(name, "udp") == 0) {
+                result_buf->p_name = "udp";
+                result_buf->p_aliases = aliases;
+                result_buf->p_proto = 17;
+                *result = result_buf;
+                return 0;
+            } else if (strcmp(name, "icmp") == 0) {
+                result_buf->p_name = "icmp";
+                result_buf->p_aliases = aliases;
+                result_buf->p_proto = 1;
+                *result = result_buf;
+                return 0;
+            }
+            
+            *result = NULL;
+            return ENOSYS;
+        }
+        STUBS
+
+        # Compile the stubs into a static library
+        gcc -c network_stubs.c -o network_stubs.o
+        ar rcs /usr/lib/libnetworkstubs.a network_stubs.o
+
+        cd /bpftrace-build
+
         # Create build directory
         mkdir -p build
         cd build
-        
-        # Use musl instead of glibc for static builds
-        export CC=musl-gcc
-        export CXX=musl-g++
 
         # Configure with CMake - using C++17 instead of C++20 to avoid compatibility issues
-        echo "=== Trying CMake configuration with musl and C++17 ==="
+        # Add -Wl,--wrap options for problematic functions
+        echo "=== Trying CMake configuration with C++17 and NSS function wrapping ==="
         LLVM_REQUESTED_VERSION=16 cmake .. \
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_VERBOSE_MAKEFILE=ON \
@@ -626,19 +655,15 @@ EOF_NETWORK
           -DSTATIC_LINKING=ON \
           -DENABLE_MAN=OFF \
           -DWITH_LIBPOLLY=OFF \
-          -DHAVE_CLANG_PARSER=OFF \
-          -DHAVE_SYSTEMTAP=OFF \
-          -DHAVE_KPROBE_MULTI=OFF \
-          -DHAVE_LIBPCAP=OFF \
-          -DUSE_LIBCLANG_PARSER=OFF \
+          -DHAVE_CLANG_PARSER=ON \
           -DZSTD_LIBRARY=${ZSTD_LIB_PATH} \
           -DZSTD_INCLUDE_DIR=${ZSTD_INCLUDE_PATH} \
           -DCMAKE_MODULE_PATH=/bpftrace-build/cmake/custom:/bpftrace-build/cmake/modules \
           -DCMAKE_PREFIX_PATH=/bpftrace-build/cmake/custom \
           -DCMAKE_CXX_STANDARD=17 \
-          -DCMAKE_CXX_FLAGS="-fPIC -Wno-error=missing-field-initializers -DNO_DNS_SUPPORT" \
-          -DCMAKE_C_FLAGS="-fPIC -DNO_DNS_SUPPORT" \
-          -DCMAKE_EXE_LINKER_FLAGS="-static -Wl,--allow-multiple-definition -Wl,--no-as-needed -Wl,--gc-sections -Wl,--whole-archive /usr/lib/libnetwork_stubs.a -Wl,--no-whole-archive"
+          -DCMAKE_CXX_FLAGS="-Wno-error=missing-field-initializers" \
+          -DCMAKE_EXE_LINKER_FLAGS="-L/usr/lib -static -Wl,--allow-multiple-definition -Wl,--verbose -Wl,--unresolved-symbols=ignore-in-object-files -Wl,--wrap=gethostbyname -Wl,--wrap=getnetbyname_r -Wl,--wrap=getprotobyname_r /usr/lib/libnetworkstubs.a" \
+          -DCLANG_LIBRARY=/usr/lib/libclang.a
 
         # ======= PATCH LINK COMMAND FILES DIRECTLY =======
         echo "Patching link command files directly..."
@@ -663,39 +688,109 @@ EOF_NETWORK
           # Replace attempt to use shared libclang.so with static version
           sed -i 's|/usr/lib/libclang.so|/usr/lib/libclang.a|g' "$link_file"
           
-          # Make sure we're using musl's static libraries
-          if ! grep -q "/usr/lib/libnetwork_stubs.a" "$link_file"; then
-            sed -i 's|-o bpftrace|-o bpftrace /usr/lib/libnetwork_stubs.a|g' "$link_file"
+          # Make sure we're using static linking flags
+          if ! grep -q -- "-static" "$link_file"; then
+            sed -i 's/CMakeFiles\/bpftrace.dir\/main.cpp.o/CMakeFiles\/bpftrace.dir\/main.cpp.o -static/g' "$link_file"
           fi
           
-          # Add flags to reduce network resolution dependencies
-          if ! grep -q -- "-Wl,--no-as-needed" "$link_file"; then
-            sed -i 's/CMakeFiles\/bpftrace.dir\/main.cpp.o/CMakeFiles\/bpftrace.dir\/main.cpp.o -Wl,--no-as-needed/g' "$link_file"
+          # Add allow multiple definition flag to handle potential symbol conflicts
+          if ! grep -q -- "--allow-multiple-definition" "$link_file"; then
+            sed -i 's/-static/-static -Wl,--allow-multiple-definition/g' "$link_file"
           fi
+          
+          # Add verbose flag to get more information during linking
+          if ! grep -q -- "--verbose" "$link_file"; then
+            sed -i 's/--allow-multiple-definition/--allow-multiple-definition -Wl,--verbose/g' "$link_file"
+          fi
+          
+          # Add new options to ignore NSS functions issues
+          if ! grep -q -- "--unresolved-symbols=ignore-in-object-files" "$link_file"; then
+            sed -i 's/--verbose/--verbose -Wl,--unresolved-symbols=ignore-in-object-files/g' "$link_file"
+          fi
+          
+          # Add wrapping for problematic NSS functions
+          if ! grep -q -- "--wrap=gethostbyname" "$link_file"; then
+            sed -i 's/--unresolved-symbols=ignore-in-object-files/--unresolved-symbols=ignore-in-object-files -Wl,--wrap=gethostbyname -Wl,--wrap=getnetbyname_r -Wl,--wrap=getprotobyname_r/g' "$link_file"
+          fi
+          
+          # Add our static network stubs library
+          if ! grep -q "libnetworkstubs.a" "$link_file"; then
+            sed -i 's|/usr/lib/libclang.a|/usr/lib/libclang.a /usr/lib/libnetworkstubs.a|g' "$link_file"
+          fi
+          
+          # Double check the patched file
+          echo "After patching, ${link_file} contains:"
+          cat "$link_file"
         done
 
         # Build the project
-        echo "=== Building bpftrace with musl ==="
-        make -j$(nproc) VERBOSE=1
+        echo "=== Building bpftrace ==="
+        make -j$(nproc) VERBOSE=1 || (echo "Initial build failed, checking for errors" && find . -name CMakeError.log -exec cat {} \;)
 
-        # If build still fails, create a minimal stub bpftrace
+        # If build fails, try with simplified configuration
         if [ ! -f "src/bpftrace" ]; then
-          echo "Build failed - creating minimal stub bpftrace"
-          mkdir -p src
-          cat > src/stub_bpftrace.c << 'STUB'
-        #include <stdio.h>
-        
-        int main(int argc, char *argv[]) {
-            printf("Minimal bpftrace stub (placeholder binary)\n");
-            if (argc > 1) {
-                printf("Script: %s cannot be run in this minimal build.\n", argv[1]);
-            }
-            return 0;
-        }
-        STUB
+          echo "Initial build failed, attempting with simplified configuration..."
           
-          musl-gcc -static src/stub_bpftrace.c -o src/bpftrace
-          echo "Created minimal stub bpftrace"
+          cd ..
+          rm -rf build
+          mkdir -p build
+          cd build
+          
+          LLVM_REQUESTED_VERSION=16 cmake .. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_VERBOSE_MAKEFILE=ON \
+            -DBUILD_TESTING=OFF \
+            -DSTATIC_LINKING=ON \
+            -DENABLE_MAN=OFF \
+            -DWITH_LIBPOLLY=OFF \
+            -DHAVE_BCC_PROG_LOAD=OFF \
+            -DHAVE_BCC_CREATE_MAP=OFF \
+            -DHAVE_BFD_DISASM=OFF \
+            -DHAVE_CLANG_PARSER=OFF \
+            -DUSE_LIBCLANG_PARSER=OFF \
+            -DZSTD_LIBRARY=${ZSTD_LIB_PATH} \
+            -DZSTD_INCLUDE_DIR=${ZSTD_INCLUDE_PATH} \
+            -DCMAKE_MODULE_PATH=/bpftrace-build/cmake/custom:/bpftrace-build/cmake/modules \
+            -DCMAKE_PREFIX_PATH=/bpftrace-build/cmake/custom \
+            -DCMAKE_CXX_STANDARD=17 \
+            -DCMAKE_CXX_FLAGS="-Wno-error=missing-field-initializers -DNO_CLANG_PARSER" \
+            -DCMAKE_EXE_LINKER_FLAGS="-static -Wl,--allow-multiple-definition -Wl,--verbose -Wl,--unresolved-symbols=ignore-in-object-files -Wl,--wrap=gethostbyname -Wl,--wrap=getnetbyname_r -Wl,--wrap=getprotobyname_r /usr/lib/libnetworkstubs.a"
+          
+          make -j$(nproc) VERBOSE=1
+        fi
+        
+        # If still not successful, try with minimal configuration and alternative approach
+        if [ ! -f "src/bpftrace" ]; then
+          echo "Simplified build failed, attempting with minimal configuration..."
+          
+          cd ..
+          rm -rf build
+          mkdir -p build
+          cd build
+          
+          # Try with a truly minimal build that completely disables networking functions
+          LLVM_REQUESTED_VERSION=16 cmake .. \
+            -DCMAKE_BUILD_TYPE=Release \
+            -DCMAKE_VERBOSE_MAKEFILE=ON \
+            -DBUILD_TESTING=OFF \
+            -DSTATIC_LINKING=ON \
+            -DENABLE_MAN=OFF \
+            -DWITH_LIBPOLLY=OFF \
+            -DHAVE_BCC_PROG_LOAD=OFF \
+            -DHAVE_BCC_CREATE_MAP=OFF \
+            -DHAVE_BFD_DISASM=OFF \
+            -DHAVE_CLANG_PARSER=OFF \
+            -DUSE_LIBCLANG_PARSER=OFF \
+            -DUSE_LIBPCAP=OFF \
+            -DZSTD_LIBRARY=${ZSTD_LIB_PATH} \
+            -DZSTD_INCLUDE_DIR=${ZSTD_INCLUDE_PATH} \
+            -DCMAKE_MODULE_PATH=/bpftrace-build/cmake/custom:/bpftrace-build/cmake/modules \
+            -DCMAKE_PREFIX_PATH=/bpftrace-build/cmake/custom \
+            -DCMAKE_CXX_STANDARD=17 \
+            -DCMAKE_CXX_FLAGS="-Wno-error=missing-field-initializers -DNO_CLANG_PARSER -DNO_NETWORKING" \
+            -DCMAKE_EXE_LINKER_FLAGS="-static -Wl,--allow-multiple-definition -Wl,--verbose -Wl,--unresolved-symbols=ignore-in-object-files -Wl,--no-as-needed /usr/lib/libnetworkstubs.a"
+          
+          make -j$(nproc) VERBOSE=1
         fi
 
         # Check if the binary was successfully built
@@ -715,9 +810,13 @@ EOF_NETWORK
           
           tar -czf /bpftrace/bpftrace-android-arm64-static.tar.gz -C release android-arm64
           echo "Package created: bpftrace-android-arm64-static.tar.gz"
-          exit 0
         else
-          echo "Something went wrong - this should not happen!"
+          echo "Build failed - bpftrace binary not found!"
+          echo "==== Build Error Information ===="
+          find . -name "CMakeError.log" -exec cat {} \; || true
+          find . -name "CMakeOutput.log" -exec cat {} \; || true
+          # Try to get more error details
+          find . -name "*.log" -exec grep -l "error:" {} \; | xargs cat 2>/dev/null || true
           exit 1
         fi
         EOF
